package proto_msghandler;

message RouteMessageRequest {
  required string data = 1;
}

message RouteMessageResponse {
  required string data = 1;
}
